添加旋转木马例程

--- a/基础demo/PRJ_MSVS/X_GUI_SIM.vcxproj
+++ b/基础demo/PRJ_MSVS/X_GUI_SIM.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_Listbox.c" />
     <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_LogoIconFont.c" />
     <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_Messagebox.c" />
+    <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_MoveRect.c" />
     <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_MoveWindow.c" />
     <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_MultiWindow.c" />
     <ClCompile Include="..\GUI_App\GUI_DEMO\GUI_DEMO_Number_Keyboard.c" />
